# sagemaker-tensorflow-extensions

./: .coverage  .flake8  .gitignore  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  NOTICE  README.md  README.rst  VERSION  buildspec-deploy.yml  buildspec-release.yml  buildspec.yml  cpplint.sh  create_integ_test_docker_images.py  dummy.txt  setup.py  tox.ini
benchmarking/: benchmark.py  bucket_helper.py  dataset.py  recordio_utils.py  script.py  setup.py
benchmarking/pipemode_benchmark/: __init__.py  benchmark.py  bucket_helper.py  dataset.py  local_benchmark.py  region_helper.py  repo_helper.py  script.py
benchmarking/pipemode_benchmark/docker/: Dockerfile  gpu_pipeline_script.py  input_only_script.py
src/pipemode_op/: CMakeLists.txt
src/pipemode_op/Dataset/: CMakeLists.txt
src/pipemode_op/Dataset/src/: pipemode_dataset_op_kernel.cpp
src/pipemode_op/PipeStateManager/: CMakeLists.txt  PipeStateManager.cpp  PipeStateManager.hpp
src/pipemode_op/RecordReader/: CMakeLists.txt  RecordIOReader.cpp  RecordIOReader.hpp  RecordReader.cpp  RecordReader.hpp  TFRecordReader.cpp  TFRecordReader.hpp  TextLineRecordReader.cpp  TextLineRecordReader.hpp
src/pipemode_op/include/tensorflow/core/lib/hash/: crc32c.h
src/pipemode_op/include/tensorflow/core/platform/: types.h
src/pipemode_op/include/tensorflow/tsl/lib/hash/: crc32c.h
src/pipemode_op/test/: CMakeLists.txt
src/pipemode_op/test/testPipeStateManager/: CMakeLists.txt  TestPipeStateManager.cpp  TestPipeStateManager.hpp
src/pipemode_op/test/testRecordReader/: CMakeLists.txt  TestRecordIOReader.cpp  TestRecordIOReader.hpp  TestRecordReader.cpp  TestRecordReader.hpp  TestTFRecordReader.cpp  TestTFRecordReader.hpp  TestTextLineRecordReader.cpp  TestTextLineRecordReader.hpp  common.cpp  common.hpp  main.cpp
src/pipemode_op/test/testRecordReader/resources/: 100.tfrecords
src/sagemaker_tensorflow/: __init__.py  pipemode.py
test/: recordio_utils.py
test/functional/: test_pipemode.py
test/integ/: Dockerfile  Dockerfile-py3  integ_test_resources.py  test_pipemode.py  timeout.py
test/integ/scripts/: estimator_script.py
test/unit/: test_pipemode.py
